--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "server": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "hubs": "^0.0.1",
     "knex": "^0.20.7",
     "sqlite3": "^4.1.1"
   },
